examples/errors/destructure_missing_property.vut
let user = { name: "Vut" }
let { age } = user
